fixing tests and continue with refactor - 389 of 394 tests passing